--- a/index.html
+++ b/index.html
@@ -5,29 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Запуск AI-Бота за 7 Дней | Дмитрий Ferixdi</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
+              display: ['Space Grotesk', 'sans-serif'],
             },
             colors: {
-              primary: '#6366f1', // Indigo 500
-              secondary: '#ec4899', // Pink 500
-              dark: '#0f172a', // Slate 900
-              darker: '#020617', // Slate 950
-              card: '#1e293b', // Slate 800
+              primary: '#8b5cf6', // Violet 500
+              secondary: '#d946ef', // Fuchsia 500
+              accent: '#06b6d4', // Cyan 500
+              dark: '#030712', // Gray 950
+              surface: '#111827', // Gray 900
+            },
+            backgroundImage: {
+              'grid-pattern': "linear-gradient(to right, #1f2937 1px, transparent 1px), linear-gradient(to bottom, #1f2937 1px, transparent 1px)",
+            },
+            backgroundSize: {
+              'grid-pattern': '40px 40px',
             },
             animation: {
               'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
               'float': 'float 6s ease-in-out infinite',
+              'glow': 'glow 2s ease-in-out infinite alternate',
             },
             keyframes: {
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
                 '50%': { transform: 'translateY(-20px)' },
+              },
+              glow: {
+                '0%': { boxShadow: '0 0 5px #8b5cf6, 0 0 10px #8b5cf6' },
+                '100%': { boxShadow: '0 0 20px #d946ef, 0 0 30px #d946ef' },
               }
             }
           },
@@ -37,30 +49,49 @@
     <style>
       html {
         scroll-behavior: smooth;
-        scroll-padding-top: 80px; /* Offset for sticky navbar */
+        scroll-padding-top: 80px;
       }
       body {
-        background-color: #020617;
+        background-color: #030712;
         color: #f8fafc;
+        overflow-x: hidden;
+      }
+      .bg-grid {
+        background-size: 50px 50px;
+        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.05) 1px, transparent 1px),
+                          linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+        mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
+        -webkit-mask-image: linear-gradient(to bottom, black 40%, transparent 100%);
       }
       .glass {
-        background: rgba(30, 41, 59, 0.7);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
+        background: rgba(17, 24, 39, 0.7);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+      }
+      .glass-card {
+        background: rgba(31, 41, 55, 0.4);
+        backdrop-filter: blur(8px);
         border: 1px solid rgba(255, 255, 255, 0.05);
+        transition: all 0.3s ease;
+      }
+      .glass-card:hover {
+        background: rgba(31, 41, 55, 0.6);
+        border-color: rgba(139, 92, 246, 0.3);
+        transform: translateY(-5px);
+        box-shadow: 0 10px 40px -10px rgba(139, 92, 246, 0.3);
       }
       .gradient-text {
-        background: linear-gradient(to right, #818cf8, #f472b6);
+        background: linear-gradient(to right, #a78bfa, #e879f9, #22d3ee);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        background-size: 200% auto;
+        animation: gradient 5s linear infinite;
       }
-      /* Hide scrollbar for clean horizontal scroll */
-      .no-scrollbar::-webkit-scrollbar {
-        display: none;
-      }
-      .no-scrollbar {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
+      @keyframes gradient {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
       }
     </style>
   <script type="importmap">
